@startuml

title __UDP's Class Diagram__\n

  namespace com.example.front_sample {
    namespace utils {
      namespace udp {
        class com.example.front_sample.utils.udp.UDPHandler {
            - angularContext : List<int[][]>
            - frameDuration : int
            {static} - instance : UDPHandler
            - log : String
            + getAngularContext()
            + getCurrentFrame()
            + getFrameDuration()
            {static} + getInstance()
            + getLogChange()
            + nextFrame()
            + popFirstAngularContext()
            + receiveBroadcast()
            + setAngularContext()
            + setAngularContext()
            + setFrameDuration()
            + setSquareContext()
            + setSquareContext()
            + startServer()
            + stopServer()
            ~ log()
            - UDPHandler()
            - sendPictureAsync()
        }
      }
    }
  }
  

  namespace com.example.front_sample {
    namespace utils {
      namespace udp {
        class com.example.front_sample.utils.udp.UDPServerThread {
            {static} - TAG : String
            {static} - UDP_SIZE_LIMIT_BYTES : int
            - androidPort : int
            - boardAddress : InetAddress
            - boardPort : int
            - running : boolean
            - socket : DatagramSocket
            + run()
            + sendPictureImmediately()
            ~ UDPServerThread()
            ~ setRunning()
            - preparePrefix()
            - sendDatagramPacket()
        }
      }
    }
  }
  

  com.example.front_sample.utils.udp.UDPHandler o-- com.example.front_sample.utils.udp.UDPServerThread : udpServerThread
  com.example.front_sample.utils.udp.UDPServerThread o-- com.example.front_sample.utils.udp.UDPHandler : udpHandlerParent


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
